// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListRecords > should display PerformOperation form 1`] = `
"<div id=\\"perform-operation-modal\\">
  <div class=\\"bg-gray-900 bg-opacity-50 dark:bg-opacity-80 fixed inset-0 z-40\\"></div>
  <div tabindex=\\"-1\\" class=\\"overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full justify-center items-center flex\\">
    <div class=\\"relative p-4 w-full h-full md:h-auto max-w-sm\\">
      <div class=\\"relative bg-white rounded-lg shadow dark:bg-gray-700\\">
        <div class=\\"p-4 rounded-t flex justify-between items-center border-b border-gray-200 dark:border-gray-600\\">
          <h1>Perform operation</h1><button type=\\"button\\" class=\\"text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white\\"><svg class=\\"w-5 h-5\\" fill=\\"currentColor\\" viewBox=\\"0 0 20 20\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <path fill-rule=\\"evenodd\\" d=\\"M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z\\" clip-rule=\\"evenodd\\"></path>
            </svg></button>
        </div>
        <div class=\\"p-6\\">
          <form>
            <div class=\\"mb-4\\" required=\\"\\">
              <!----><select class=\\"w-full text-sm bg-gray-50 border-[1px] border-gray-300 rounded-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 p-2\\">
                <option disabled=\\"\\" value=\\"\\">Operation type</option>
              </select>
            </div>
            <div class=\\"flex flex-col gap-4\\">
              <!--v-if-->
              <!--v-if-->
            </div>
          </form>
        </div>
        <div class=\\"p-6 rounded-b border-gray-200 border-t dark:border-gray-600\\">
          <div class=\\"flex justify-between\\"><button class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-4 py-2 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-4 py-2\\">
              <!----><span class=\\"\\"><!---->Cancel<!----></span>
              <!---->
            </button><button class=\\"text-blue-700 border-blue-700 focus:ring-4 focus:outline-none font-medium rounded-lg dark:border-blue-500 dark:text-blue-500 dark:focus:ring-blue-800 hover:text-white hover:bg-blue-800 dark:hover:text-white dark:hover:bg-blue-600 px-4 py-2 text-blue-700 border border-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm text-center dark:border-blue-500 dark:text-blue-500 dark:focus:ring-blue-800 hover:text-white hover:bg-blue-800 dark:hover:text-white dark:hover:bg-blue-600 text-sm px-4 py-2\\" type=\\"submit\\">
              <!----><span class=\\"\\"><!----><div class=\\"flex justify-center items-center gap-2\\">Submit <!--v-if--></div><!----></span>
              <!---->
            </button></div>
        </div>
      </div>
    </div>
  </div>
</div>
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"text-gray-500\\">No records found</div>
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\" style=\\"display: none;\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">1</span> <span> to   <span class=\\"font-medium\\">0</span></span> <span hidden=\\"\\"> of   <span class=\\"font-medium\\">0</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ListRecords > should handle back pagination 1`] = `
"<!--v-if-->
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <table data-v-83c58b0d=\\"\\" class=\\"table table-auto w-full\\">
            <thead data-v-83c58b0d=\\"\\" class=\\"text-left text-xs font-medium text-gray-700 uppercase border-b\\">
              <tr data-v-83c58b0d=\\"\\">
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Type</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Operation</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Cost</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Date</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\"></th>
              </tr>
            </thead>
            <tbody data-v-83c58b0d=\\"\\">
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Addition
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">50 + 50 = 10...</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back hover:text-blue-600\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">11</span> <span> to   <span class=\\"font-medium\\">20</span></span> <span> of   <span class=\\"font-medium\\">21</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next hover:text-blue-600\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ListRecords > should handle deletion properly 1`] = `
"<!--v-if-->
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <table data-v-83c58b0d=\\"\\" class=\\"table table-auto w-full\\">
            <thead data-v-83c58b0d=\\"\\" class=\\"text-left text-xs font-medium text-gray-700 uppercase border-b\\">
              <tr data-v-83c58b0d=\\"\\">
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Type</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Operation</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Cost</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Date</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\"></th>
              </tr>
            </thead>
            <tbody data-v-83c58b0d=\\"\\">
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Addition
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">50 + 50 = 10...</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">1</span> <span> to   <span class=\\"font-medium\\">1</span></span> <span hidden=\\"\\"> of   <span class=\\"font-medium\\">1</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ListRecords > should handle next pagination 1`] = `
"<!--v-if-->
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <table data-v-83c58b0d=\\"\\" class=\\"table table-auto w-full\\">
            <thead data-v-83c58b0d=\\"\\" class=\\"text-left text-xs font-medium text-gray-700 uppercase border-b\\">
              <tr data-v-83c58b0d=\\"\\">
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Type</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Operation</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Cost</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Date</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\"></th>
              </tr>
            </thead>
            <tbody data-v-83c58b0d=\\"\\">
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Addition
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">50 + 50 = 10...</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">1</span> <span> to   <span class=\\"font-medium\\">10</span></span> <span> of   <span class=\\"font-medium\\">11</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next hover:text-blue-600\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ListRecords > should hide PerformOperation form 1`] = `
"<!--v-if-->
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"text-gray-500\\">No records found</div>
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\" style=\\"display: none;\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">1</span> <span> to   <span class=\\"font-medium\\">0</span></span> <span hidden=\\"\\"> of   <span class=\\"font-medium\\">0</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ListRecords > should render properly 1`] = `
"<!--v-if-->
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"text-gray-500\\">No records found</div>
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\" style=\\"display: none;\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">1</span> <span> to   <span class=\\"font-medium\\">0</span></span> <span hidden=\\"\\"> of   <span class=\\"font-medium\\">0</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ListRecords > should render records properly 1`] = `
"<!--v-if-->
<div class=\\"list-records flex flex-col\\">
  <div data-v-c970699f=\\"\\" class=\\"sm:top-auto sm:relative sm:border-b p-4 pr-4 sm:p-6 bg-gray-100 w-full border main-header\\">
    <div data-v-c970699f=\\"\\" class=\\"sm:max-w-2xl sm:m-auto\\">
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center border-b mb-4 pb-4 text-gray-600\\">
        <h1 data-v-c970699f=\\"\\" class=\\"text-sm\\">Arithmetic App</h1><a data-v-c970699f=\\"\\" href=\\"#\\" class=\\"text-sm font-bold\\">Logout</a>
      </div>
      <div data-v-c970699f=\\"\\" class=\\"w-full flex justify-between items-center gap-2\\"><button data-v-c970699f=\\"\\" class=\\"text-gray-900 bg-white border-gray-300 focus:outline-none focus:ring-4 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 px-3 py-1.5 text-gray-900 bg-white border border-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 font-medium rounded-lg dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:focus:ring-gray-700 hover:bg-gray-100 dark:hover:border-gray-600 text-sm px-3 py-1.5 shadow\\">
          <!----><span class=\\"\\"><!---->Perform operation<!----></span>
          <!---->
        </button>
        <div data-v-c970699f=\\"\\" class=\\"flex flex-col balance items-center justify-center\\"><span data-v-c970699f=\\"\\" class=\\"text-xs font-bold\\">User balance</span>
          <div data-v-c970699f=\\"\\" class=\\"text-right w-full text-xs\\">
            <!--v-if--><span data-v-c970699f=\\"\\" id=\\"user-balance\\">$200.00</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-between grow\\">
    <div data-v-83c58b0d=\\"\\" class=\\"grow block overflow-y-auto w-full table-container sm:max-w-3xl sm:m-auto\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex flex-col justify-center items-center w-full\\">
        <!--v-if-->
        <!--v-if-->
        <div data-v-83c58b0d=\\"\\" class=\\"w-full\\">
          <table data-v-83c58b0d=\\"\\" class=\\"table table-auto w-full\\">
            <thead data-v-83c58b0d=\\"\\" class=\\"text-left text-xs font-medium text-gray-700 uppercase border-b\\">
              <tr data-v-83c58b0d=\\"\\">
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Type</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Operation</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Cost</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\">Date</th>
                <th data-v-83c58b0d=\\"\\" scope=\\"col\\" class=\\"px-6 py-3 w-auto no-wrap\\"></th>
              </tr>
            </thead>
            <tbody data-v-83c58b0d=\\"\\">
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Addition
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">50 + 50 = 10...</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Subtract
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\"></span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Multiplication
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\"></span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Division
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\"></span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Square Root
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">√ undefined ...</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Random String
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">100</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Random String
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">100</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
              <tr data-v-83c58b0d=\\"\\" class=\\"bg-white border-b hover:bg-gray-50\\">
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full min-w-20\\">Not supported
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">
                  <div class=\\"flex justify-between w-44\\"><span class=\\"relative\\" title=\\"100\\">Not supporte...</span><span class=\\"hidden group-hover:block text-indigo-500 cursor-pointer font-bold font-xs\\">COPY</span></div>
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\">$20.00
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full !w-40\\">06/26/2023 21:01:59
                  <!--v-if-->
                </td>
                <td data-v-83c58b0d=\\"\\" class=\\"group px-6 py-4 text-xs font-normal text-gray-700 w-full\\"> <svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 hover:text-indigo-500 cursor-pointer\\">
                    <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0\\"></path>
                  </svg></td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div data-v-83c58b0d=\\"\\" class=\\"w-full bg-gray-100 border-t pagination flex items-center justify-center\\">
      <div data-v-83c58b0d=\\"\\" class=\\"flex items-center justify-between\\">
        <div class=\\"flex flex-1 items-center justify-between\\">
          <div class=\\"flex items-center justify-center w-full gap-2\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-back text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M15.75 19.5L8.25 12l7.5-7.5\\"></path>
            </svg>
            <p class=\\"text-sm text-gray-700\\"> Showing from <span class=\\"font-medium\\">1</span> <span> to   <span class=\\"font-medium\\">1</span></span> <span hidden=\\"\\"> of   <span class=\\"font-medium\\">1</span> results </span></p><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke-width=\\"1.5\\" stroke=\\"currentColor\\" aria-hidden=\\"true\\" class=\\"w-4 h-4 cursor-pointer pagination-next text-gray-300\\">
              <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M8.25 4.5l7.5 7.5-7.5 7.5\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
